# Route-Mate

./: .env.example  .gitignore  README.md  ROADMAP.md  STATUS.md  docker-compose.yml
.github/workflows/: ci.yml  (+4 more)
android/: .gitignore  gradle.properties  settings.gradle.kts
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  bookings.py  devices.py  geocode.py  me.py  ratings.py  rides.py  safety.py  saved_routes.py  schemas.py
backend/app/core/: config.py  firebase.py  logging.py  metrics.py  ratelimit.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/alembic/: env.py
backend/app/db/alembic/versions/: 0001_initial.py  0002_add_upi_id.py  0003_add_recurrence_days.py  0004_user_settings.py  0005_safety_columns.py  0006_incidents.py  0007_share_tokens.py  0008_polyline_geom.py  0009_saved_routes.py
backend/app/services/: anomaly.py  geo.py  geocode.py  notifications.py  rides.py  routing.py
backend/app/ws/: ride.py
backend/tests/: conftest.py  test_booking_lifecycle.py  test_geocode.py  test_health.py  test_ratings.py  test_recurrence.py  test_recurrence_clone.py  test_ws_auth.py
deploy/: .env.vps.example  README.md  bootstrap-vps-ubuntu.sh  bootstrap-vps.sh  deploy-vps.sh  docker-compose.vps.yml
docs/: architecture.md  copilot-instructions.md  deployment-vps.md  mvp-readiness-report.md  operations-runbook.md  owner-brief.md  postgresql-backup-restore.md  production-validation-smoke-test.md  roadmap.md
infra/: Caddyfile  bootstrap.sh  docker-compose.yml
(+107 files in other folders)
